# imgComp-fltk

./: CMakeLists.txt  Fl_Anim_GIF_Image.cpp  Fl_Image_Display.H  Fl_Image_Display.cxx  MostRecentPaths.cpp  MostRecentPaths.h  README.md  SharedImageExt.cpp  SharedImageExt.h  ViewWin.cpp  ViewWin.h  Webp.cpp  archiveData.h  events.h  filedata.cpp  filedata.h  imgComp-fltk.sln  imgComp-fltk.vcxproj  imgComp.kdev4  logging.cpp  logging.h  main.cpp  prefs.h  procThread.cpp
imgComp-fltkZ/: ArchiveData.cpp  Extractor.cpp  FL_Tree_Columns.cpp  FL_Tree_Columns.hpp  filedata.cpp  imgComp-fltkZ.vcxproj  main.cpp
imgCompZ_cl/: imgCompZ_cl.vcxproj  main.cpp  procthread.cpp
imgComp_cl/: imgComp_cl.vcxproj  main.cpp  procthread.cpp
